--- a/interface/main.css
+++ b/interface/main.css
@@ -15,3 +15,14 @@
 	margin-bottom: 50px;
 	text-align: center;
 }
+
+.company-profile {
+	border-radius: 10px;
+	padding: 10px;
+	width: 100%;
+	background-color: rgb(226, 241, 255);
+}
+
+.profile-name {
+	font-size: 24px;
+}
