--- a/interface/main.css
+++ b/interface/main.css
@@ -3,7 +3,8 @@
 	margin: 5px;
 	padding: 20px;
 	text-align: center;
-	background-color:lightblue;
+	border-radius: 10px;
+	background-color:rgb(226, 241, 255);
 	box-shadow: 5px 5px 8px gray;
 }
 
