--- a/interface/main.css
+++ b/interface/main.css
@@ -1,11 +1,18 @@
 
 .fw-box {
-	margin: 5px;
 	padding: 20px;
+	height: 350px;
+	overflow: auto;
 	text-align: center;
 	border-radius: 10px;
-	background-color:rgb(226, 241, 255);
-	box-shadow: 5px 5px 8px gray;
+	background-color: #fcfcfc;
+}
+
+.fw-box .fw-box-header {
+	width: 100%;
+	font-size: 16pt;
+	font-weight: 500;
+	margin: 0 0 20px 0
 }
 
 .fw-box p {
