Add program and supervisor lists to the real page

--- a/src/main/webapp/css/company.css
+++ b/src/main/webapp/css/company.css
@@ -2,3 +2,15 @@
 #edit-form {
 	display: none;
 }
+
+.programs-container {
+	min-height: 400px;
+}
+
+.program-profile {
+	margin: 5px;
+	border-radius: 10px;
+	padding: 10px;
+	width: 100%;
+	background-color: white;
+}
