--- a/src/main/webapp/css/program.css
+++ b/src/main/webapp/css/program.css
@@ -6,3 +6,11 @@
 .programs-container {
 	min-height: 400px;
 }
+
+.program-profile {
+	margin: 5px;
+	border-radius: 10px;
+	padding: 10px;
+	width: 100%;
+	background-color: white;
+}
